--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -8,9 +8,21 @@ line-height: 1.1;
 font-weight:lighter;
 }
 
+.transition{
+  -webkit-transition: all 2s;
+  transition: all 2s;
+
+}
+
+.resize{
+position:fixed;  
+width:200px;
+height:10px;  
+
+}
+
 .main-navbar{
-  -webkit-transition: all 0.3s
-  width:$fullwidth;
+  width:100%;
   height: 14%;
   .introName{
       @extend .common;
@@ -49,9 +61,9 @@ font-weight:lighter;
   background-color: black;
   opacity: 0.8;
   
-  &:hover {
-    width: 50px;
-  }
+  
+    
+  
 }
 
 
