--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -3,7 +3,7 @@
 
 .common{
 font-family: "Raleway", sans-serif;
-color: $grey;
+color: $white;
 line-height: 1.1;
 font-weight:lighter;
 }
@@ -23,7 +23,7 @@ height:10px;
 .main-navbar{
   z-index:10;
   width:100%;
-  height: 14%;
+  height: 13%;
   .introName{
       @extend .common;
     
@@ -85,6 +85,7 @@ height:10px;
             float: left;
           }
           #mecontent{
+            background-color:rgba(158, 155, 155, 0.8);
             padding-top:10px;
 
             #aboutme {
@@ -98,7 +99,6 @@ height:10px;
               padding-top: 7px;
             }
             opacity:0.6;
-            background: rgba(0,0,0,1); 
             color: #fff;
             padding: 1.5rem;
             width: 65%;
@@ -120,9 +120,14 @@ height:10px;
           }
     }
   #past{
-    button{
+    #next{
+      background-image: url("/img/arrow.png");
       z-index:3;
       position:absolute;
+      width: 512px;
+      background-repeat: no-repeat;
+      background-size: 50px 50px;
+      height: 512px;
     }
     overflow:hidden;
     width:1500px;
@@ -134,6 +139,64 @@ height:10px;
   
   
   }
+  #middlebg{
+    background:url("/img/mdbackground.png") top right no-repeat; 
+    background-position-x: 50%;
+    width:100%;
+    height:500px;
+    background-attachment:fixed;
+  
+  
+  }
+  
+  #experience{
+    margin-left: 200px;
+    margin-top: 50px;
+    background-color:black;
+    
+    #experience1{
+      float:left;
+      background-repeat: no-repeat;
+      width:200px;
+      height:200px;
+      background-image: url("/img/daumkakao.png");
+      z-index:3;
+      background-size: 150px 150px;
+      
+    }
+    #experience2{
+      float:left;
+      background-repeat: no-repeat;
+      width:200px;
+      height:200px;
+      background-image: url("/img/daumkakao.png");
+      z-index:3;
+      background-size: 150px 150px;
+      
+    }
+    #experience3{
+      float:left;
+      background-repeat: no-repeat;
+      width:200px;
+      height:200px;
+      background-image: url("/img/daumkakao.png");
+      z-index:3;
+      background-size: 150px 150px;
+    }
+    #experience4{
+      float:left;
+      background-repeat: no-repeat;
+      width:200px;
+      height:200px;
+      background-image: url("/img/daumkakao.png");
+      z-index:3;
+      background-size: 150px 150px;
+    }
+  
+  
+  
+  
+  }
 
   
 }
@@ -141,6 +204,6 @@ height:10px;
 
 
 body {
-  background-color: lighten($white, 10);
+  background-color: black;
   
 }
