--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -161,18 +161,30 @@ height:10px;
   #past{
     height:550px;
     #next{
+      width: 3rem;
+      margin-left: 97.5%;
       font-size:1rem;
       letter-spacing:1rem;
-      color:white;
-      padding-left:50%;
       position:absolute;
-      background-position-x:50%;
-      //background-image: url("/img/arrow.png");
-      z-index:3;
+      background-image: url("/img/disclose-arrow-copy.png");
+      z-index:100;
+      margin-top: 9%;
       background-repeat: no-repeat;
-      background-size: 50px 50px;
-      height: 512px;
+      background-size: 30px 30px;
+      height: 512px
     }
+    #previous{
+      width: 3rem;
+      position:absolute;
+      background-position-x:20%;
+      background-image: url("/img/previous.png");
+      z-index:100;
+      margin-top: 9%;
+      background-repeat: no-repeat;
+      background-size: 30px 30px;
+      height: 512px
+    }
+    
     overflow:hidden;
     width:100%;
     height:333px;
@@ -317,7 +329,45 @@ height:10px;
   
   
   }
-  
+  #qoute{
+    @extend .common;
+    width: 27rem;
+    letter-spacing: 1rem;
+    font-size: 1.2rem;
+    color: white;
+    margin-left: 37%;
+ 
+  }
+  #faces{
+    -webkit-column-count: 3;
+    -moz-column-count: 3; 
+    column-count: 3;
+    width: 100%;
+    height: 12rem;
+      
+      #picasso{
+        margin-left: 13rem;
+        height: 10rem;
+        background-size: 10rem;
+        background-repeat: no-repeat;
+        background-image: url("/img/picasso.jpg");
+      }
+      #jobs{
+        background-position-y: 4rem;
+        height: 16rem;
+        margin-left: 8rem;
+        background-size: 13rem;
+        background-repeat: no-repeat;
+        background-image: url("/img/jobs.png");
+      }
+      #aur{
+        height: 10rem;
+        margin-left: 6rem;
+        background-size: 13rem;
+        background-repeat: no-repeat;
+        background-image: url("/img/Aurelius.jpg");
+      }
+    }
   #qoutes{
     @extend .common;
     h1{
@@ -345,6 +395,15 @@ height:10px;
   
 }
 
+footer{
+  background-color:grey;
+  @extend .common;
+  letter-spacing: 1rem;
+  color: white;
+  width:100%;
+  font-size: 0.5rem;
+  padding-left: 10%;
+}
 
 
 body {
