--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -346,6 +346,7 @@ height:10px;
     height: 12rem;
       
       #picasso{
+        background-position-y: 2rem;
         margin-left: 13rem;
         height: 10rem;
         background-size: 10rem;
